--- a/index.html
+++ b/index.html
@@ -3,60 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RSA Encryption</title>
+  <title>RSA Web Tool</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
 </head>
 <body class="bg-gray-100 p-6 font-sans">
-  <div class="max-w-2xl mx-auto bg-white rounded-xl shadow-md p-6">
-    <h2 class="text-2xl font-bold mb-4 text-center">🔐 RSA Encryption & QR Code</h2>
+  <div class="max-w-3xl mx-auto bg-white rounded-xl shadow-md p-6">
+    <h2 class="text-2xl font-bold mb-6 text-center">🔐 RSA Encryption, QR Code & Decryption Tool</h2>
+
+    <!-- RSA Key Input -->
+    <div class="grid grid-cols-2 gap-4 mb-4">
+      <div>
+        <label class="text-sm">p (prime):</label>
+        <input type="number" id="p" class="w-full border px-2 py-1 rounded">
+      </div>
+      <div>
+        <label class="text-sm">q (prime):</label>
+        <input type="number" id="q" class="w-full border px-2 py-1 rounded">
+      </div>
+      <div class="col-span-2">
+        <label class="text-sm">e (public exponent):</label>
+        <input type="number" id="e" class="w-full border px-2 py-1 rounded">
+      </div>
+    </div>
+    <button onclick="calculateKeys()" class="bg-blue-600 text-white px-4 py-2 rounded w-full mb-4">Hitung n dan d</button>
 
     <div class="grid grid-cols-2 gap-4 mb-4">
       <div>
-        <label class="block text-sm">p (prime):</label>
-        <input type="number" id="p" class="w-full border px-2 py-1 rounded" required>
+        <label class="text-sm">n:</label>
+        <input type="text" id="n" class="w-full border px-2 py-1 rounded bg-gray-100" readonly>
       </div>
       <div>
-        <label class="block text-sm">q (prime):</label>
-        <input type="number" id="q" class="w-full border px-2 py-1 rounded" required>
-      </div>
-      <div class="col-span-2">
-        <label class="block text-sm">e (public exponent):</label>
-        <input type="number" id="e" class="w-full border px-2 py-1 rounded" required>
+        <label class="text-sm">d:</label>
+        <input type="text" id="d" class="w-full border px-2 py-1 rounded bg-gray-100" readonly>
       </div>
     </div>
 
+    <!-- Plaintext -->
     <div class="mb-4">
-      <button onclick="calculateKeys()" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 w-full">🔄 Hitung n dan d</button>
-    </div>
-
-    <div class="mb-4">
-      <label class="block text-sm">n (p × q):</label>
-      <input type="text" id="n" class="w-full border px-2 py-1 rounded bg-gray-100" readonly>
-    </div>
-
-    <div class="mb-4">
-      <label class="block text-sm">d (private exponent):</label>
-      <input type="text" id="d" class="w-full border px-2 py-1 rounded bg-gray-100" readonly>
-    </div>
-
-    <div class="mb-4">
-      <label class="block text-sm">Plaintext (ID Surat):</label>
+      <label class="text-sm">Plaintext (ID Surat):</label>
       <input type="text" id="plaintext" class="w-full border px-2 py-1 rounded"
+        value="SERTIFIKAT/012/24052025/IGUSTIAYUSRI_BIDANGPENGMAS">
     </div>
 
-    <div class="mb-4">
-      <button onclick="encrypt()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full">🔐 Encrypt</button>
-    </div>
+    <!-- Encrypt -->
+    <button onclick="encrypt()" class="bg-green-600 text-white px-4 py-2 rounded w-full mb-4">Encrypt & Generate QR</button>
 
     <div class="mb-4">
-      <label class="block text-sm">Ciphertext:</label>
+      <label class="text-sm">Ciphertext:</label>
       <textarea id="ciphertext" rows="4" class="w-full border px-2 py-1 rounded" readonly></textarea>
     </div>
 
-    <div class="mb-4 text-center">
-      <canvas id="qrcode-canvas" class="mx-auto mb-2"></canvas>
-      <button onclick="downloadQR()" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">⬇️ Simpan QR Code</button>
+    <!-- QR Code -->
+    <div class="text-center mb-6">
+      <canvas id="qrcode-canvas" class="mx-auto"></canvas>
+      <button onclick="downloadQR()" class="mt-2 bg-purple-600 text-white px-4 py-2 rounded">⬇️ Simpan QR Code</button>
+    </div>
+
+    <hr class="my-6">
+
+    <!-- QR Scanner Upload -->
+    <div class="mb-4">
+      <label class="text-sm font-semibold">📷 Upload QR Code Image to Decrypt:</label>
+      <input type="file" id="qrUpload" accept="image/*" onchange="scanQR(event)" class="block mt-2">
+    </div>
+
+    <!-- Ciphertext (From QR) -->
+    <div class="mb-4">
+      <label class="text-sm">Ciphertext (dari QR/manual):</label>
+      <textarea id="ciphertextInput" rows="4" class="w-full border px-2 py-1 rounded"></textarea>
+    </div>
+
+    <!-- Decrypt -->
+    <button onclick="decrypt()" class="bg-red-600 text-white px-4 py-2 rounded w-full mb-4">🔓 Decrypt</button>
+
+    <!-- Output -->
+    <div>
+      <label class="text-sm">Plaintext Hasil Dekripsi:</label>
+      <textarea id="decryptedText" rows="2" class="w-full border px-2 py-1 rounded bg-gray-100" readonly></textarea>
     </div>
   </div>
 
@@ -80,25 +105,14 @@
       const p = parseInt(document.getElementById("p").value);
       const q = parseInt(document.getElementById("q").value);
       const e = parseInt(document.getElementById("e").value);
-
-      if (!p || !q || !e || p <= 1 || q <= 1) {
-        alert("Masukkan nilai p, q, dan e yang valid.");
-        return;
-      }
+      if (!p || !q || !e) return alert("Isi semua nilai p, q, dan e");
 
       const n = p * q;
       const phi = (p - 1) * (q - 1);
-
-      if (gcd(e, phi) !== 1) {
-        alert("Nilai e tidak coprime dengan φ(n). Silakan coba nilai lain.");
-        return;
-      }
+      if (gcd(e, phi) !== 1) return alert("e tidak coprime dengan φ(n)");
 
       const d = modInverse(e, phi);
-      if (d === null) {
-        alert("Tidak ditemukan invers modular untuk e.");
-        return;
-      }
+      if (d === null) return alert("Tidak ditemukan invers modular");
 
       document.getElementById("n").value = n;
       document.getElementById("d").value = d;
@@ -108,21 +122,16 @@
       const plaintext = document.getElementById("plaintext").value;
       const e = parseInt(document.getElementById("e").value);
       const n = parseInt(document.getElementById("n").value);
+      if (!e || !n) return alert("Hitung kunci terlebih dahulu");
 
-      if (!e || !n) {
-        alert("Pastikan Anda telah menghitung nilai kunci terlebih dahulu.");
-        return;
-      }
+      const ciphertext = Array.from(plaintext).map(ch => {
+        const m = BigInt(ch.charCodeAt(0));
+        const c = m ** BigInt(e) % BigInt(n);
+        return c.toString();
+      }).join(" ");
 
-      const encoded = [];
-      for (let i = 0; i < plaintext.length; i++) {
-        const m = plaintext.charCodeAt(i);
-        const c = BigInt(m) ** BigInt(e) % BigInt(n);
-        encoded.push(c.toString());
-      }
-
-      const ciphertext = encoded.join(" ");
       document.getElementById("ciphertext").value = ciphertext;
+      document.getElementById("ciphertextInput").value = ciphertext;
 
       QRCode.toCanvas(document.getElementById("qrcode-canvas"), ciphertext, function (error) {
         if (error) console.error(error);
@@ -135,6 +144,47 @@
       link.href = canvas.toDataURL("image/png");
       link.download = "qr_ciphertext.png";
       link.click();
+    }
+
+    function scanQR(event) {
+      const file = event.target.files[0];
+      const reader = new FileReader();
+      reader.onload = function() {
+        const img = new Image();
+        img.onload = function() {
+          const canvas = document.createElement("canvas");
+          canvas.width = img.width;
+          canvas.height = img.height;
+          const ctx = canvas.getContext("2d");
+          ctx.drawImage(img, 0, 0);
+          const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+          const code = jsQR(imageData.data, canvas.width, canvas.height);
+          if (code) {
+            document.getElementById("ciphertextInput").value = code.data;
+          } else {
+            alert("QR Code tidak terbaca");
+          }
+        };
+        img.src = reader.result;
+      };
+      reader.readAsDataURL(file);
+    }
+
+    function decrypt() {
+      const ciphertext = document.getElementById("ciphertextInput").value.trim().split(" ");
+      const d = BigInt(document.getElementById("d").value);
+      const n = BigInt(document.getElementById("n").value);
+      if (!d || !n || ciphertext.length === 0) return alert("Isi kunci dan ciphertext terlebih dahulu");
+
+      try {
+        const chars = ciphertext.map(c => {
+          const m = BigInt(c) ** d % n;
+          return String.fromCharCode(Number(m));
+        });
+        document.getElementById("decryptedText").value = chars.join("");
+      } catch (err) {
+        alert("Gagal dekripsi. Pastikan ciphertext valid dan kunci benar.");
+      }
     }
   </script>
 </body>
